1998-03-18  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (admin): Rename admin-26-o* to admin-26-*; the "o"
	stands for "cvs admin -o".  Add comment about length of tests.
	Use ${PLUS}.

1998-03-05  Dan Wilder <dan@gasboy.com>
 
 	* Fix problem with cvs admin in which -ntag:branch 
 	option associated tag with the branch's head revision.  
 	Should have used branch number.  Entailed in this fix, 
 	the following.
 
 	* Add new functions "RCS_exist_rev", "RCS_exist_tag",
 	"RCS_tag2rev", and "RCS_valid_rev" to rcs.c.  RCS_tag2rev
 	is similar to RCS_gettag, but does less interpretation.
 
 	* Plug a small memory leak.

 	* Add tests admin-26 through admin-29 to sanity.sh,
 	to test "cvs admin -n".
        
1998-03-17  Samuel Tardieu  <sam@inf.enst.fr>

	* server.c (server_register): protect dereferencing timestamp in
	the trace message when it is null, to avoid a segmentation fault.

1998-03-16  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h.in (MY_NDBM): Rewrite the comment explaining this
	option.  It was not clear to everyone who "my" referred to, for
	example.

	* hardlink.c (list_linked_files_on_disk): Remove unused variables
	err and p.
	(list_linked_files_on_disk): Add comment about memory allocation
	of return value.
	* rcs.c (rcsbuf_getword): Shut up gcc -Wall with a "return 0".
	(RCS_checkin): Remove unused variable fullpath.
	* sanity.sh (hardlinks): Remove comment about spurious warnings;
	the warnings are gone.

1998-03-12  Tim Pierce  <twp@skepsis.com>

	New functions for parsing and writing hardlink fields.
	* rcs.c [PRESERVE_PERMISSIONS_SUPPORT] (puthardlink_proc): New
	function.
	(putdelta) [PRESERVE_PERMISSIONS_SUPPORT]: Use it.
	(rcsbuf_getid, rcsbuf_getstring, rcsbuf_getword): New functions.
	(getdelta): Call them, storing `hardlinks' field in vnode->hardlinks.
	(RCS_reparsercsfile): When setting rdata->desc, xstrdup value
	rather than rcsbuf_valcopying it (due to changes in how getdelta
	handles keys and values in newphrases).
